--- a/index.html
+++ b/index.html
@@ -4,44 +4,34 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Jenkins-asskicker-server by aferre</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/aferre/jenkins-asskicker-server">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/aferre/jenkins-asskicker-server/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/aferre/jenkins-asskicker-server/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
-
+      <header>
+        <h1>Jenkins-asskicker-server</h1>
+        <p>Node.js based sound server for kicking developers asses</p>
+        <p class="view"><a href="https://github.com/aferre/jenkins-asskicker-server">View the Project on GitHub <small>aferre/jenkins-asskicker-server</small></a></p>
+        <ul>
+          <li><a href="https://github.com/aferre/jenkins-asskicker-server/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/aferre/jenkins-asskicker-server/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/aferre/jenkins-asskicker-server">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
       <section>
-        <div id="title">
-          <h1>Jenkins-asskicker-server</h1>
-          <p>Node.js based sound server for kicking developers asses</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/aferre">aferre</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
-
         <h1>
 <a name="jenkins-asskicker-server" class="anchor" href="#jenkins-asskicker-server"><span class="octicon octicon-link"></span></a>jenkins-asskicker-server</h1>
 
 <p><a href="https://travis-ci.org/aferre/jenkins-asskicker-server"><img src="https://travis-ci.org/aferre/jenkins-asskicker-server.png?branch=master" alt="Build Status"></a>
+<a href="http://badge.fury.io/js/jenkins-asskicker-server"><img src="https://badge.fury.io/js/jenkins-asskicker-server.png" alt="NPM version"></a>
 <a href="https://bitdeli.com/free" title="Bitdeli Badge"><img src="https://d2weczhvl823v0.cloudfront.net/aferre/jenkins-asskicker-server/trend.png" alt="Bitdeli Badge"></a></p>
 
 <p>Node.js based sound server for kicking developers asses.</p>
@@ -49,20 +39,68 @@
 <h2>
 <a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Install</h2>
 
-<p>$ sudo apt-get install redis-server libasound2-dev
-$ git clone <a href="https://github.com/aferre/jenkins-asskicker-server.git">https://github.com/aferre/jenkins-asskicker-server.git</a>
-$ cd jenkins-asskicker-server
-$ node app.js</p>
+<pre><code>sudo apt-get install redis-server libasound2-dev libavahi-compat-libdnssd-dev
+git clone https://github.com/aferre/jenkins-asskicker-server.git
+cd jenkins-asskicker-server
+npm install
+node app.js
+</code></pre>
+
+<p>or using the npm modules in the npm registry</p>
+
+<pre><code>sudo apt-get install redis-server libasound2-dev
+npm install -g jenkins-asskicker-server
+jenkins-asskicker-server
+</code></pre>
 
 <h2>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
 
-<p>For now, you cannot do much... </p>
+<p>The jenkins instances will be automagically discovered on the local network using either mdns or udp broadcasting. 
+Both of these are provided in Jenkins out-of-the-box. Once jenkins instances are discovered (and they are up), 
+all jobs will be monitored using either udp (install jenkins plugin <a href="https://wiki.jenkins-ci.org/display/JENKINS/Notification+Plugin">https://wiki.jenkins-ci.org/display/JENKINS/Notification+Plugin</a> 
+and see the configuration section below) or websocket (install jenkins plugin 
+<a href="https://wiki.jenkins-ci.org/display/JENKINS/Websocket+Plugin">https://wiki.jenkins-ci.org/display/JENKINS/Websocket+Plugin</a> and see the configuration section below).</p>
 
 <h2>
-<a name="todo" class="anchor" href="#todo"><span class="octicon octicon-link"></span></a>TODO</h2>
+<a name="configuration" class="anchor" href="#configuration"><span class="octicon octicon-link"></span></a>Configuration</h2>
 
-<p>Add jenkins up/down support.</p>
+<ul>
+<li>
+<p>redis: </p>
+
+<ul>
+<li>host:</li>
+<li>port:</li>
+</ul>
+</li>
+<li>
+<p>jenkins:</p>
+
+<ul>
+<li>websocket:</li>
+<li>port:</li>
+<li>udp:
+
+<ul>
+<li>port:</li>
+<li>interval:</li>
+<li>consideredDownInterval:</li>
+</ul>
+</li>
+<li>notifyUponRestart:</li>
+</ul>
+</li>
+<li>
+<p>desc:</p>
+
+<ul>
+<li>location:</li>
+<li>users:</li>
+</ul>
+</li>
+</ul><h2>
+<a name="todo" class="anchor" href="#todo"><span class="octicon octicon-link"></span></a>TODO</h2>
 
 <p>Add multiple langages support.</p>
 
@@ -72,8 +110,11 @@ $ node app.js</p>
 
 <p>Add per-job configuration.</p>
       </section>
-
     </div>
+    <footer>
+      <p>Project maintained by <a href="https://github.com/aferre">aferre</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
